Fixed (2) : 'z-index' property was set to each div of the context menu, not to the parent

--- a/apps/dolphin/launcher.css
+++ b/apps/dolphin/launcher.css
@@ -187,7 +187,7 @@ body .night-window.minimized {
   background-color: white;
   color: black;
   font-size: 14px;
-  z-index: 4;
+  z-index: 999999;
   border: 1px solid gray;
   /* no bottom border because all elements in the menu will have a border-bottom
      property set */
@@ -201,7 +201,6 @@ body .night-window.minimized {
   padding-left: 15px;
   padding-right: 15px;
   cursor: default;
-  z-index: 999999;
 }
 
 #context-menu div:hover {
